--- a/osa3/puhelinluettelo_backend/package.json
+++ b/osa3/puhelinluettelo_backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/atteasi/Fullstack/tree/main#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "morgan": "^1.10.0"
   }
